add roller speed setting feature

--- a/desktop/griffon-app/i18n/messages.properties
+++ b/desktop/griffon-app/i18n/messages.properties
@@ -13,6 +13,7 @@ MachineInterface.action.PaperButton.text=Paper
 MachineInterface.action.DeleteButton.text=Delete
 MachineInterface.action.StartPrint.text=Start Print
 MachineInterface.action.StopPrint.text=Stop Print
+MachineInterface.action.StartPowder.text=Start Powder
 MachineInterface.action.GoToStartButton.text=To Start
 MachineInterface.action.GoToEndButton.text=To End
 MachineInterface.action.ServoLabel.text=Servo
